--- a/tinder.css
+++ b/tinder.css
@@ -51,6 +51,7 @@
     border-radius: 12px;
     overflow: hidden;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    cursor:pointer;
   }
 
 
@@ -60,3 +61,11 @@
     background-size: cover;
     background-position: center center;
   }
+
+  /* .profile__infos {
+    padding:12px;
+    position:absolute;
+    bottom:0px;
+    background:linear-gradient(0deg, black, transparent);
+    width: 100%;
+  } */
