--- a/tinder.css
+++ b/tinder.css
@@ -35,7 +35,7 @@
     max-width: 30%;
   }
 
-/********************************************** PROFILES **************************************************/
+/****************************************************** PROFILS *******************************************************/
 
   .profiles {
     width:100%;
@@ -57,6 +57,22 @@
     /* Avec none, on ne pourra pas sélectionner le texte de l'élt et celui de ses descendants. */
   }
 
+
+  .profile__image {
+    height: 0;
+    padding-bottom:150%;
+    background-size: cover;
+    background-position: center center;
+  }
+
+  .profile__infos {
+    padding:12px;
+    position:absolute;
+    bottom:0px;
+    background:linear-gradient(0deg, black, transparent);
+    width: 100%;
+  }
+
   .profile__name {
     color:white;
     font-weight: bold;
@@ -73,20 +89,7 @@
     font-size:13px;
   }
 
-  .profile__image {
-    height: 0;
-    padding-bottom:150%;
-    background-size: cover;
-    background-position: center center;
-  }
-
-  .profile__infos {
-    padding:12px;
-    position:absolute;
-    bottom:0px;
-    background:linear-gradient(0deg, black, transparent);
-    width: 100%;
-  }
+  /***************************************** Bouttons de la barre inferieure **********************************************/
 
   .bottombar {
     margin-top:24px;
@@ -111,3 +114,40 @@
     cursor:pointer;
     opacity:0.8;
   }
+
+
+  .profile--match {
+    transition: var(--transition-time);
+    transform:translateX(1500px) translateY(600px) rotate(90deg);
+  }
+
+  .profile--next {
+    transition: var(--transition-time);
+    transform:translateX(-1500px) translateY(600px) rotate(-90deg);
+  }
+  
+  .profile--back {
+    transition:var(--transition-time);
+  }
+  
+  .profile--matching::after, .profile--nexting::after {
+    content:'MATCH';
+    font-weight: bold;
+    font-size:28px;
+    padding:8px 12px;
+    border:solid 2px var(--green);
+    color:var(--green);
+    background:var(--black-transparent);
+    position:absolute;
+    top:24px;
+    right:12px;
+    border-radius: 4px;
+    transform:rotate(24deg);
+  } 
+  
+  .profile--nexting::after {
+    content:'NEXT';
+    border:solid 2px var(--red);
+    color:var(--red);
+  }
+    
